jstl, standard 라이브러리 추가 로그인, 로그아웃,Qna게시판 리스트 MVC 변환

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/mycine/review/ReviewDAO.java=UTF-8
 encoding//src/mycine/review/ReviewDTO.java=UTF-8
+encoding/<project>=UTF-8
