회원정보 수정, 회원 탈퇴, 요청게시판 MVC패턴으로 전환

--- a/WebContent/WEB-INF/myCINEcommand.properties
+++ b/WebContent/WEB-INF/myCINEcommand.properties
@@ -2,15 +2,23 @@
 /header.do=mycine.main.action.HeaderAction
 /popupForm.do=mycine.famousline.action.FamousLineFormAciton
 /popup.do=mycine.famousline.action.FamousLineAction
+#member
 /joinForm.do=mycine.member.action.JoinFormAction
 /join.do=mycine.member.action.JoinAction
+/idCheckForm.do=mycine.member.action.IdCheckFormAction
 /idCheck.do=mycine.member.action.IdCheckAction
 /searchAddrForm.do=mycine.member.action.SearchAddrFormAction
 /searchAddr.do=mycine.member.action.SearchAddrAction
 /addrList.do=mycine.member.action.AddrListAction
+/memberInfoForm.do=mycine.member.action.MemberInfoFormAction
+/memberInfo.do=mycine.member.action.MemberInfoAction
+/updateSearchAddrForm.do=mycine.member.action.UpdateSearchFormAction
+/updateSearchAddr.do=mycine.member.action.UpdateSearchAction
 /loginForm.do=mycine.member.action.LoginFormAction
 /login.do=mycine.member.action.LoginAction
 /logout.do=mycine.member.action.LogOutAction
+/memberDeleteForm.do=mycine.member.action.MemberDeleteFormAction
+/memberDelete.do=mycine.member.action.MemberDeleteAction
 #QnA
 /qnaList.do=mycine.qna.action.QnaListAction
 /qnaContent.do=mycine.qna.action.QnaContentAction
@@ -18,3 +26,10 @@
 /qnaWrite.do=mycine.qna.action.QnaWriteAction
 /qnaReWriteForm.do=mycine.qna.action.QnaWriteAction
 /qnaReWrite.do=mycine.qna.action.QnaWriteAction
+#request
+/requestList.do=mycine.request.action.RequestListAction
+/requestForm.do=mycine.request.action.RequestFormAction
+/request.do=mycine.request.action.RequestAction
+/recommend.do=mycine.request.action.RequestRecommendAction
+#timeline
+/timeline.do=myicne.timeline.action.TimeLineListAction
