이벤트 부분 MVC 일부 변환

--- a/WebContent/WEB-INF/myCINEcommand.properties
+++ b/WebContent/WEB-INF/myCINEcommand.properties
@@ -32,4 +32,13 @@
 /request.do=mycine.request.action.RequestAction
 /recommend.do=mycine.request.action.RequestRecommendAction
 #timeline
-/timeline.do=myicne.timeline.action.TimeLineListAction
+/timeline.do=mycine.timeline.action.TimeLineListAction
+#event
+/eventMain.do=mycine.event.action.EventMainAction
+/eventExchangeForm.do=mycine.event.action.EventExChangeFormAction
+/eventExchange.do=mycine.event.action.EventExChangeAction
+/eventExprize.do=mycine.event.action.EventExprizeAction
+/eventDeprize.do=mycine.event.action.EventDeprizeAction
+/eventMyPoint.do=mycine.event.action.EventMyPointAction
+/eventMyPrize.do=mycine.event.action.EventMyPrizeAction
+/eventRePrize.do=mycine.event.action.EventRePrizeAction
