QnA MVC 변환 일부 수정

--- a/WebContent/WEB-INF/myCINEcommand.properties
+++ b/WebContent/WEB-INF/myCINEcommand.properties
@@ -26,6 +26,8 @@
 /qnaWrite.do=mycine.qna.action.QnaWriteAction
 /qnaReWriteForm.do=mycine.qna.action.QnaWriteAction
 /qnaReWrite.do=mycine.qna.action.QnaWriteAction
+/qnaDelForm.do=mycine.qna.action.QnaDelFormAction
+/qnaDel.do=mycine.qna.action.QnaDelAction
 #request
 /requestList.do=mycine.request.action.RequestListAction
 /requestForm.do=mycine.request.action.RequestFormAction
