리뷰 기능 MVC 일부변환(글수정하기,댓글관련,글삭제,글검색)

--- a/WebContent/WEB-INF/myCINEcommand.properties
+++ b/WebContent/WEB-INF/myCINEcommand.properties
@@ -2,6 +2,11 @@
 /header.do=mycine.main.action.HeaderAction
 /popupForm.do=mycine.famousline.action.FamousLineFormAciton
 /popup.do=mycine.famousline.action.FamousLineAction
+#company
+/companyMain.do=mycine.company.action.CompanyMainAction
+/dataProtection.do=mycine.company.action.DataProtectAction
+/ethic.do=mycine.company.action.EthicAction
+/support.do=mycine.company.action.SupportAction
 #member
 /joinForm.do=mycine.member.action.JoinFormAction
 /join.do=mycine.member.action.JoinAction
@@ -28,13 +33,28 @@
 /qnaReWrite.do=mycine.qna.action.QnaWriteAction
 /qnaDelForm.do=mycine.qna.action.QnaDelFormAction
 /qnaDel.do=mycine.qna.action.QnaDelAction
+/qnaSearch.do=mycine.qna.action.QnaSearchAction
 #request
 /requestList.do=mycine.request.action.RequestListAction
 /requestForm.do=mycine.request.action.RequestFormAction
 /request.do=mycine.request.action.RequestAction
 /recommend.do=mycine.request.action.RequestRecommendAction
+#review
+/reviewList.do=mycine.review.action.ReviewListAction
+/reviewWriteForm.do=mycine.review.action.ReviewWriteFormAction
+/reviewWrite.do=mycine.review.action.ReviewWriteAction
+/reviewUpdateForm.do=mycine.review.action.ReviewUpdateFormAction
+/reviewUpdate.do=mycine.review.action.ReviewUpdateAction
+/reviewDelForm.do=mycine.review.action.ReviewDelFormAction
+/reviewDel.do=mycine.review.action.ReviewDelAction
+/reviewCommentList.do=mycine.review.action.ReviewCommentListAction
+/reviewCommentForm.do=mycine.review.action.ReviewCommentFormAction
+/reviewComment.do=mycine.review.action.ReviewCommentAction
+/reviewCommend.do=mycine.review.action.ReviewCommendAction
+/reviewContent.do=mycine.review.action.ReviewContentAction
+/reviewSearchList.do=/mycine.review.action.ReviewSearchListAction
 #timeline
-/timeline.do=mycine.timeline.action.TimeLineListAction
+/myCINE/timeline.jsp=mycine.timeline.action.TimeLineListAction
 #event
 /eventMain.do=mycine.event.action.EventMainAction
 /eventExchangeForm.do=mycine.event.action.EventExChangeFormAction
