리뷰기능 MVC 변환(내글 찾기) 이벤트 기능 MVC변환(상품 교환)

--- a/WebContent/WEB-INF/myCINEcommand.properties
+++ b/WebContent/WEB-INF/myCINEcommand.properties
@@ -52,7 +52,9 @@
 /reviewComment.do=mycine.review.action.ReviewCommentAction
 /reviewCommend.do=mycine.review.action.ReviewCommendAction
 /reviewContent.do=mycine.review.action.ReviewContentAction
-/reviewSearchList.do=/mycine.review.action.ReviewSearchListAction
+/reviewSearchList.do=mycine.review.action.ReviewSearchListAction
+/reviewFind.do=mycine.review.action.ReviewFindAction
+/reviewFindMyContent.do=mycine.review.action.ReviewFindMyContentAction
 #timeline
 /myCINE/timeline.jsp=mycine.timeline.action.TimeLineListAction
 #event
